# event_base

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: README.md  _coverpage.md  _sidebar.md  index.html
docs/benchmark/: README.md
docs/benchmark/queue_send_flume/1M msgs/1000000/base/: benchmark.json  sample.json  tukey.json
docs/benchmark/queue_send_flume/1M msgs/1000000/new/: estimates.json
docs/benchmark/queue_send_flume/1M msgs/1000000/report/: index.html
docs/benchmark/queue_send_flume/unbounded/1000000/base/: benchmark.json  sample.json
docs/benchmark/queue_send_flume/unbounded/1000000/new/: estimates.json  tukey.json
docs/benchmark/queue_send_mpmc/1M msgs/1000000/base/: benchmark.json
docs/benchmark/queue_send_mpmc/1M msgs/1000000/new/: estimates.json  sample.json  tukey.json
docs/benchmark/queue_send_mpmc/1M msgs/1000000/report/: index.html
docs/benchmark/queue_send_recv_flume/1M msgs/1000000/base/: benchmark.json
docs/benchmark/queue_send_recv_flume/1M msgs/1000000/new/: estimates.json  sample.json  tukey.json
docs/benchmark/queue_send_recv_flume/1M msgs/1000000/report/: index.html
docs/benchmark/report/: index.html
docs/benchmark/system_process/handler+1mw/10000/base/: sample.json  tukey.json
docs/benchmark/system_process/handler+1mw/10000/change/: estimates.json
docs/benchmark/system_process/handler+1mw/10000/new/: benchmark.json  estimates.json
docs/benchmark/system_process/handler+1mw/10000/report/: index.html
docs/benchmark/system_process/handler+cpu/10000/base/: estimates.json  sample.json  tukey.json
docs/benchmark/system_process/handler+cpu/10000/change/: estimates.json
docs/benchmark/system_process/handler+cpu/10000/new/: benchmark.json
docs/benchmark/system_process/handler+cpu/10000/report/: index.html
docs/benchmark/system_process/handler-only/10000/base/: benchmark.json  sample.json  tukey.json
docs/benchmark/system_process/handler-only/10000/change/: estimates.json
docs/benchmark/system_process/handler-only/10000/new/: estimates.json
docs/benchmark/system_process/handler-only/10000/report/: index.html
docs/benchmark/system_process/handler-only/50000/base/: benchmark.json  sample.json
docs/benchmark/system_process/handler-only/50000/new/: estimates.json  tukey.json
docs/benchmark/system_process/handler-only/50000/report/: index.html
docs/benchmark/system_send/TopicRouter__send/base/: benchmark.json  estimates.json  sample.json  tukey.json
docs/benchmark/system_send/TopicRouter__send/change/: estimates.json
docs/benchmark/system_send/TopicRouter__send/report/: index.html
docs/guide/: core-concepts.md  distributed.md  handler.md  middleware.md  persistence.md  quick-start.md  sending.md  shutdown.md
docs/internals/: architecture.md
event_base_audit/: Cargo.toml
event_base_audit/src/: console.rs
event_base_core/: Cargo.toml
event_base_core/src/: audit.rs  constant.rs  dead_letter.rs  error.rs  handler.rs  lib.rs  message.rs  middleware.rs  registry.rs  shutdown.rs  topic.rs  trace.rs  trace_layer.rs  worker.rs  worker_registry.rs
event_base_core/src/error/: audit.rs  handler.rs  middleware.rs  mod.rs  queue.rs  serialize.rs  shutdown.rs  topic.rs  wal.rs
event_base_core/src/metrics/: aggregator.rs  manager.rs  mod.rs  node.rs  node_store.rs
event_base_core/src/queues/: consumer_factory.rs  consumer_router.rs  factory.rs  memory.rs  mod.rs
event_base_core/src/shutdown/: messages.rs  methods.rs  mod.rs
event_base_core/src/system_handlers/: audit.rs  metrics.rs  mod.rs  shutdown.rs  system.rs  topic.rs  trace.rs  wal.rs  worker.rs
event_base_core/src/traits/: codec.rs
event_base_core/src/wal/: codec.rs  mod.rs  sync.rs  wal.rs
event_base_grpc/: Cargo.toml  build.rs
event_base_grpc/protos/: main.proto
event_base_grpc/src/: lib.rs  server.rs
event_base_macro_attr/: Cargo.toml
event_base_macro_attr/src/: handler.rs  lib.rs
event_base_macro_func/: Cargo.toml
event_base_macro_func/src/: lib.rs  send_msg.rs  start_system.rs
event_base_marco/: Cargo.toml
event_base_marco/src/: lib.rs
event_base_middleware/: Cargo.toml
event_base_middleware/src/: logger.rs
event_base_queue/: Cargo.toml
event_base_queue/src/: crossfire.rs  flume.rs  lib.rs  memory.rs  mpmc.rs
event_base_test/: Cargo.toml
event_base_test/benches/: codec.rs  queue.rs
event_base_test/src/: support.rs
event_base_test/tests/: audit_metrics.rs  core_types.rs  core_workflow.rs  error_coverage.rs  memory_wal.rs  middleware.rs  persistent_wal.rs  queues.rs  shutdown_methods.rs  system_handlers.rs  topic_router.rs  trace_layer.rs  types_and_codec.rs  wal_codec.rs  wal_sync.rs  worker_integration.rs  worker_processing.rs  worker_registry.rs
event_base_wal/: Cargo.toml
event_base_wal/src/: lib.rs  memory.rs  persistent.rs
src/: lib.rs
