[package]
name = "event_base"
version = "0.1.0"
edition = "2024"
authors = ["RedElectricity <redelectricity@outlook.com>"]
description = "An Event Driven Framework"
license = "BSD-3-Clause"
repository = "https://github.com/RedElectricity/event_base"
homepage = "https://github.com/RedElectricity/event_base"
documentation = "https://docs.rs/event_base"


[dependencies]
event_base_core = {path = "event_base_core" ,version = "*"}
event_base_audit = {path = "event_base_audit" ,version = "*"}
event_base_grpc = {path = "event_base_grpc" ,version = "*"}
event_base_macro_attr = {path = "event_base_macro_attr" ,version = "*"}
event_base_macro_func = {path = "event_base_macro_func" ,version = "*"}
event_base_middleware = {path = "event_base_middleware" ,version = "*"}
event_base_queue = {path = "event_base_queue" ,version = "*"}
event_base_wal = {path = "event_base_wal" ,version = "*"}

[workspace]
members = ["event_base_core",
            "event_base_wal",
            "event_base_test",
            "event_base_queue",
            "event_base_middleware",
            "event_base_audit",
            "event_base_macro_attr",
            "event_base_macro_func",
            "event_base_grpc"
            ]
resolver = "3"

[features]
default = ["memory", "macro"]
full = ["gRPC", "middleware", "macro", "memory", "persistent","audit"]

gRPC = []
middleware = []
audit = []
memory = []
persistent = []
macro = []