[package]
name = "event_base"
version = "0.1.1"
edition = "2024"
authors = ["RedElectricity <redelectricity@outlook.com>"]
description = "An Event Driven Framework"
license = "BSD-3-Clause"
repository = "https://github.com/RedElectricity/event_base"
homepage = "https://github.com/RedElectricity/event_base"
documentation = "https://docs.rs/event_base"


[dependencies]
event_base_core = "1.0.0"
event_base_audit = "0.1.0"
event_base_grpc = "0.1.0"
event_base_macro_attr = "0.1.0"
event_base_macro_func = "0.1.0"
event_base_middleware = "0.1.0"
event_base_queue = "0.1.0"
event_base_wal = "0.1.0"

[workspace]
members = ["event_base_core",
            "event_base_wal",
            "event_base_test",
            "event_base_queue",
            "event_base_middleware",
            "event_base_audit",
            "event_base_macro_attr",
            "event_base_macro_func",
            "event_base_grpc"
            ]
resolver = "3"

[features]
default = ["memory", "macro"]
full = ["gRPC", "middleware", "macro", "memory", "persistent","audit"]

gRPC = []
middleware = []
audit = []
memory = []
persistent = []
macro = []
