[package]
name = "event_base"
version = "0.3.1"
edition = "2024"
authors = ["RedElectricity <redelectricity@outlook.com>"]
description = "An Event Driven Framework"
license = "BSD-3-Clause"
repository = "https://github.com/RedElectricity/event_base"
homepage = "https://github.com/RedElectricity/event_base"
documentation = "https://docs.rs/event_base"


[dependencies]
event_base_core.workspace = true
event_base_audit.workspace = true
event_base_grpc.workspace = true
event_base_macro_attr.workspace = true
event_base_macro_func.workspace = true
event_base_middleware.workspace = true
event_base_queue.workspace = true
event_base_wal.workspace = true

[workspace]
members = ["event_base_core",
            "event_base_wal",
            "event_base_test",
            "event_base_queue",
            "event_base_middleware",
            "event_base_audit",
            "event_base_macro_attr",
            "event_base_macro_func",
            "event_base_grpc"
            ]
resolver = "3"

[workspace.dependencies]
event_base_core = { path = "event_base_core", version = "1.4.0" }
event_base_wal = { path = "event_base_wal", version = "0.1.2" }
event_base_queue = { path = "event_base_queue", version = "0.2.0" }
event_base_audit = { path = "event_base_audit", version = "0.1.1" }
event_base_grpc = { path = "event_base_grpc", version = "0.1.1" }
event_base_macro_attr = { path = "event_base_macro_attr", version = "0.3.1" }
event_base_macro_func = { path = "event_base_macro_func", version = "0.2.0" }
event_base_middleware = { path = "event_base_middleware", version = "0.1.0" }

[features]
default = ["memory", "macro"]
full = ["gRPC", "middleware", "macro", "memory", "persistent","audit"]

gRPC = []
middleware = []
audit = []
memory = []
persistent = []
macro = []
