[package]
name = "event_base_audit"
version = "0.1.0"
edition = "2024"
authors = ["RedElectricity <redelectricity@outlook.com>"]
description = "An Event Driven Framework - Audit Crate"
license = "BSD-3-Clause"
repository = "https://github.com/RedElectricity/event_base"
homepage = "https://github.com/RedElectricity/event_base"
documentation = "https://docs.rs/event_base"

[dependencies]
event_base_core = { path = "../event_base_core" ,version = "*" }
async-trait = "0.1.89"
chrono = "0.4.45"
