[package]
name = "event_base_core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
bincode = "2.0"
dynify = "0.1.2"
dynosaur = "0.3.0"
flume = "0.12.0"
linkme = "0.3.36"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.3", features = ["v4"] }
