[package]
name = "event_base_core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
bincode = "2.0"
linkme = "0.3.36"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.3", features = ["v4"] }
tracing-core = "0.1.36"
tracing-serde = "0.2.0"
ringbuf = "0.5.0"
sysinfo = "0.39.3"
log = "0.4.32"
