[package]
name = "event_base_core"
version = "1.6.0"
edition = "2024"
authors = ["RedElectricity <redelectricity@outlook.com>"]
description = "An Event Driven Framework - Core Crate"
license = "BSD-3-Clause"
repository = "https://github.com/RedElectricity/event_base"
homepage = "https://github.com/RedElectricity/event_base"
documentation = "https://docs.rs/event_base"


[dependencies]
async-trait = "0.1.89"
bincode = "2.0.1"
linkme = "0.3.36"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.3", features = ["v4"] }
tracing-core = "0.1.36"
tracing-serde = "0.2.0"
ringbuf = "0.5.0"
sysinfo = "0.39.3"
futures = "0.3.32"
