[package]
name = "event_base_macro_func"
version = "0.1.2"
edition = "2024"
authors = ["RedElectricity <redelectricity@outlook.com>"]
description = "An Event Driven Framework - Func Macro Crate"
license = "BSD-3-Clause"
repository = "https://github.com/RedElectricity/event_base"
homepage = "https://github.com/RedElectricity/event_base"
documentation = "https://docs.rs/event_base"

[dependencies]
event_base_core.workspace = true
tokio = { version = "1.52.3", features = ["full"] }
tracing-subscriber = "0.3.23"
bincode = "2.0.1"
