[package]
name = "event_base_queue"
version = "0.1.0"
edition = "2024"
authors = ["RedElectricity <redelectricity@outlook.com>"]
description = "An Event Driven Framework - Queue Crate"
license = "BSD-3-Clause"
repository = "https://github.com/RedElectricity/event_base"
homepage = "https://github.com/RedElectricity/event_base"
documentation = "https://docs.rs/event_base"

[dependencies]
event_base_core = "1.0.0"
flume = "0.12.0"
async-trait = "0.1.89"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.3", features = ["v4"] }
tokio-mpmc = "0.2.4"
