[package]
name = "event_base_wal"
version = "0.1.0"
edition = "2024"
authors = ["RedElectricity <redelectricity@outlook.com>"]
description = "An Event Driven Framework - WAL Crate"
license = "BSD-3-Clause"
repository = "https://github.com/RedElectricity/event_base"
homepage = "https://github.com/RedElectricity/event_base"
documentation = "https://docs.rs/event_base"

[dependencies]
async-trait = "0.1.89"
event_base_core = "*"
tokio = { version = "1.52.3", features = ["full"] }
bincode = "2"
serde = { version = "1.0.228", features = ["derive"] }
